--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.3.12",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/mongoose": "^5.11.97",
